// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`route stats baseline > blog 1`] = `
{
  "crossings": 0,
  "totalVLength": 6,
}
`;

exports[`route stats baseline > questionnaire 1`] = `
{
  "crossings": 0,
  "totalVLength": 69,
}
`;

exports[`route stats baseline > snowflake-pinned 1`] = `
{
  "crossings": 0,
  "totalVLength": 14,
}
`;

exports[`route stats baseline > star-default 1`] = `
{
  "crossings": 0,
  "totalVLength": 29,
}
`;
